andamento do projeto

--- a/index.html
+++ b/index.html
@@ -21,73 +21,59 @@
   <body>
     <header>
       <nav class="menu fixednav">
+        
         <a href=""><img src="src/logo.png" alt="" /></a>
 
         <div class="btnNav">
           <button>
-            <img src="/src/lupa.png" alt="" />
+            <img src="src/lupa.png" alt="icone da lupa" />
           </button>
           <button>
-            <img src="src/user.png" alt="" />
+            <img src="src/user.png" alt="icone do usuário" />
           </button>
           <button>
-            <img src="src/car.png" alt="" />
+            <img src="src/car.png" alt="icone do carrinho" />
           </button>
         </div>
         <button id="btnMenuMobile"><i class="fa-solid fa-bars"></i></button>
       </nav>
 
-      <img id="imgBanner" src="/src/banner.png" alt="" />
+      <img id="imgBanner" src="src/banner.png" alt="" />
     </header>
 
     <main>
       <section>
         <div class="titleSection">
           <h2>PROMOÇÃO</h2>
-          <span>9 produtos</span>
+          <p>9 produtos</p>
         </div>
 
         <div class="containerProducts">
+
           <article class="boxProducts">
-            <img src="/src/produtos/img01.png" alt="" />
+            <div class="headerCard">
+                <img src="src/produtos/img01.png" alt="" />
+                <div class="background-overlay"></div>
+            </div>
+            <div class="description">
+                <!-- Descrição do Produto -->
+                <p>Descrição do Elixir da Eternidade.</p>
+            </div>
             <h4>Elixir da Eternidade</h4>
             <h5>R$<span class="valorProduto"> 50,00</span></h5>
             <button class="btnComprar">Comprar</button>
-          </article>
+        </article>
 
           <article class="boxProducts">
-            <img src="/src/produtos/img02.png" alt="" />
+            <img src="src/produtos/img02.png" alt="" />
             <h4>Vitamina do Sol</h4>
             <h5>R$<span class="valorProduto"> 50,00</span></h5>
             <button class="btnComprar">Comprar</button>
           </article>
 
           <article class="boxProducts">
-            <img src="/src/produtos/img03.png" alt="" />
-            <h4>Vitamina do Sol</h4>
-            <h5>R$<span class="valorProduto"> 50,00</span></h5>
-            <button class="btnComprar">Comprar</button>
-          </article>
-        </div>
-
-        <div class="containerProducts">
-          <article class="boxProducts">
-            <img src="/src/produtos/img 04.png" alt="" />
-            <h4>Vitamina do Sol</h4>
-            <h5>R$<span class="valorProduto"> 50,00</span></h5>
-            <button class="btnComprar">Comprar</button>
-          </article>
-
-          <article class="boxProducts">
-            <img src="/src/produtos/img5.png" alt="" />
-            <h4>Vitamina do Sol</h4>
-            <h5>R$<span class="valorProduto"> 50,00</span></h5>
-            <button class="btnComprar">Comprar</button>
-          </article>
-
-          <article class="boxProducts">
-            <img src="/src/produtos/img06.png" alt="" />
-            <h4>Vitamina do Sol</h4>
+            <img src="src/produtos/img03.png" alt="" />
+            <h4>Vitamina da Lua</h4>
             <h5>R$<span class="valorProduto"> 50,00</span></h5>
             <button class="btnComprar">Comprar</button>
           </article>
@@ -95,22 +81,46 @@
 
         <div class="containerProducts">
           <article class="boxProducts">
-            <img src="/src/produtos/img07.png" alt="" />
-            <h4>Vitamina do Sol</h4>
+            <img src="src/produtos/img 04.png" alt="" />
+            <h4>Pétalas de Amor</h4>
             <h5>R$<span class="valorProduto"> 50,00</span></h5>
             <button class="btnComprar">Comprar</button>
           </article>
 
           <article class="boxProducts">
-            <img src="/src/produtos/img08.png" alt="" />
-            <h4>Vitamina do Sol</h4>
+            <img src="src/produtos/img5.png" alt="" />
+            <h4>Essência da Natureza</h4>
             <h5>R$<span class="valorProduto"> 50,00</span></h5>
             <button class="btnComprar">Comprar</button>
           </article>
 
           <article class="boxProducts">
-            <img src="/src/produtos/img09.png" alt="" />
-            <h4>Vitamina do Sol</h4>
+            <img src="src/produtos/img06.png" alt="" />
+            <h4>Jasmin com notas de Rosa</h4>
+            <h5>R$<span class="valorProduto"> 50,00</span></h5>
+            <button class="btnComprar">Comprar</button>
+          </article>
+        </div>
+
+        <div class="containerProducts">
+          
+          <article class="boxProducts">
+            <img src="src/produtos/img07.png" alt="" />
+            <h4>Essência de Melissa</h4>
+            <h5>R$<span class="valorProduto"> 50,00</span></h5>
+            <button class="btnComprar">Comprar</button>
+          </article>
+
+          <article class="boxProducts">
+            <img src="src/produtos/img08.png" alt="" />
+            <h4>Pureza Iluminada</h4>
+            <h5>R$<span class="valorProduto"> 50,00</span></h5>
+            <button class="btnComprar">Comprar</button>
+          </article>
+
+          <article class="boxProducts">
+            <img src="src/produtos/img09.png" alt="" />
+            <h4>Essência de patchouli</h4>
             <h5>R$<span class="valorProduto"> 50,00</span></h5>
             <button class="btnComprar">Comprar</button>
           </article>
@@ -146,9 +156,8 @@
         </div>
 
         <div class="paymentsFooter">
-          <img src="src/master.png" alt="logo master" />
-          <img src="src/paypal.png" alt="logo master" />
-          <img src="src/visa.png" alt="logo master" />
+          <img src="src/pagamentos.png" alt="tipos de pagamentos" />
+
         </div>
       </div>
     </footer>
