Ajustes no modal

--- a/index.html
+++ b/index.html
@@ -284,7 +284,13 @@
                   required
                 />
               </div>
-              <button type="submit" id="btnLoginModal">Login</button>
+
+               <button type="submit" id="btnLoginModal">Login</button>
+              
+               <div class="recuperarSenha">
+                 <a href="#">Esqueceu a senha?</a>
+                 
+               </div>
             </form>
           </div>
         </div>
